--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
 
 .home-quote {
   font-style: italic;
-  font-weight: 100;
+  font-weight: 350;
   font-size: 25px;
 }
 
@@ -131,6 +131,8 @@ body {
 }
 
 .pet-title {
+  display: flex;
+  justify-content: center;
   padding-top: 1.25rem;
   text-align: center;
   text-decoration: none;
@@ -140,7 +142,7 @@ body {
 .grid-container {
   display: grid;
   grid-template-columns: repeat(
-    5,
+    3,
     1fr
   ); /* This will create 5 columns of equal width */
   gap: 10px; /* This will create a 10px gap between the grid items */
@@ -153,16 +155,18 @@ body {
   text-align: center;
   list-style: inside;
 }
+*/
 
 .grid-item {
+  display: flex;
+  justify-content: center;
   padding: 0;
   text-align: center;
-} */
+}
 
 /* Add this rule to remove text-decoration */
 .grid-item a {
   text-decoration: none;
-  
 }
 
 hr {
@@ -178,28 +182,24 @@ hr {
   text-align: left;
 } */
 
-.link-list{
+.link-list {
   text-decoration: none;
   color: white;
-  
 }
-.link-list-website{
-      text-decoration: none;
-      color: #6699CC;
+.link-list-website {
+  text-decoration: none;
+  color: #6699cc;
 }
 
-footer{
+footer {
   background: #003b6d;
 }
-footer h5{
+footer h5 {
   color: #bdbdbd;
 }
-footer p{
+footer p {
   color: white;
 }
-
-
-
 
 /* @media screen and (max-width: 600px) {
   .topnav .search-container {
